# ocularus

./: .gitignore  Sugjo.Ocularus.sln  index.html  package.json  settings.html  vite.config.ts
src-dotnet/src/: Program.cs  Sugjo.Ocularus.Iconifier.csproj
src-dotnet/src/Extractors/: IIconExtractor.cs  PEIconExtractor.cs
src-icon-parser/: Program.cs  Sugjo.Ocularus.Iconifier.csproj
src-icon-parser/Extractors/: UrlIconExtractor.cs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: commands.rs  mod.rs  search.rs  search_window_switch.rs  tray.rs
src/utils/: Icon.tsx  icon.module.css
src/windows/search/: App.tsx  Layout.tsx  main.tsx  types.ts
src/windows/search/app/: App.css  App.tsx  main.tsx
src/windows/search/app/lib/: useInit.ts
src/windows/search/features/input-bar/: index.ts
src/windows/search/features/input-bar/api/: index.ts
src/windows/search/features/input-bar/model/: index.ts  useSearch.ts
src/windows/search/features/result-list/model/: useNavigation.ts
src/windows/search/widgets/input-bar/: ui.tsx
src/windows/search/widgets/result-list/: index.ts
src/windows/settings/: App.tsx  Layout.tsx  main.tsx
src/windows/settings/app/: App.css  App.tsx  Layout.tsx  main.tsx
src/windows/settings/pages/: About.tsx  Customization.tsx  General.tsx  index.ts
src/windows/settings/widgets/: GeneralSettings.tsx  ResetAndRestore.tsx  SearchPath.tsx  Update.tsx  index.ts
(+6 files in other folders)
