[package]
name = "ocularus"
version = "0.1.0"
description = "A Tauri App"
authors = ["Sugjo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ocularus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.1", features = [ "protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fuzzy-matcher = "0.3.7"
opener = "0.7.2"
walkdir = "2.5.0"
tauri-plugin-http = "2"
mime = "0.3.17"
tauri-plugin-fs = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2.0.1"
